set(INFINI_RT_PERF_BACKEND_NAME "cpu")
if(WITH_NVIDIA)
    set(INFINI_RT_PERF_BACKEND_NAME "nvidia")
elseif(WITH_ILUVATAR)
    set(INFINI_RT_PERF_BACKEND_NAME "iluvatar")
elseif(WITH_HYGON)
    set(INFINI_RT_PERF_BACKEND_NAME "hygon")
elseif(WITH_METAX)
    set(INFINI_RT_PERF_BACKEND_NAME "metax")
elseif(WITH_MARS)
    set(INFINI_RT_PERF_BACKEND_NAME "mars")
elseif(WITH_MOORE)
    set(INFINI_RT_PERF_BACKEND_NAME "moore")
elseif(WITH_CAMBRICON)
    set(INFINI_RT_PERF_BACKEND_NAME "cambricon")
elseif(WITH_ASCEND)
    set(INFINI_RT_PERF_BACKEND_NAME "ascend")
endif()

function(add_infini_rt_performance_test target)
    add_executable(${target} ${ARGN})
    target_link_libraries(${target} PRIVATE infinirt)
    target_include_directories(${target} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
    target_compile_definitions(${target}
        PRIVATE "INFINI_RT_PERF_BACKEND_NAME=\"${INFINI_RT_PERF_BACKEND_NAME}\"")
    add_test(NAME ${target} COMMAND ${target})
    set_tests_properties(${target} PROPERTIES LABELS performance)
endfunction()

add_infini_rt_performance_test(perf_runtime_dispatch perf_runtime_dispatch.cc)
add_infini_rt_performance_test(perf_memory perf_memory.cc)
add_infini_rt_performance_test(perf_tensor_view perf_tensor_view.cc)
